# mcp_db_server

./: .env.example  .gitignore  README.md  agent.py  mcp_server.py  prompts.py  pyproject.toml
db/: __init__.py  create_database.py  data.py  populate_database.py  read_database.py
tests/: test_agent_overdue_invoices.py  test_mcp_server_tools.py  test_read_database.py
